Linking Bootstrap and Jquery

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,15 @@
     <title>Eat Da Burger!</title>
 </head>
 <body>
+    <div class="container-fluid">
+        <div class="home">
+        <div class="jumbotron">
+            <h1 class="title"> Eat The Burger </h1><br />
+
+        </div>
+    </div>
+    </div>
+
     
 </body>
 </html>
