--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,6 +18,7 @@
         <div class="jumbotron">
             <h1 class="title"> Eat The Burger </h1><br />
 
+            <button id="submit" type="submit" class="btn btn-danger">Burger Button</button>
         </div>
     </div>
     </div>
