--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<!-- Linking Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
-<!--Linking CSS-->
+    <!-- Linking Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!--Linking CSS-->
     <link rel="stylesheet" type="text/css" href="../../public/assets/css/burger_style.css">
 
     <title>Eat Da Burger!</title>
 </head>
+
 <body>
     <div class="container-fluid">
         <div class="home">
-        <div class="jumbotron">
-            <h1 class="title"> Eat The Burger </h1><br />
+            <div class="jumbotron">
+                <h1 class="title"> Eat The Burger </h1><br />
 
-            <button id="submit" type="submit" class="btn btn-danger">Burger Button</button>
+                {{{ body }}}
+
+
+                <button id="submit" type="submit" class="btn btn-danger">Burger Button</button>
+            </div>
         </div>
     </div>
-    </div>
 
-     <!-- Link in jQuery -->
+    <!-- Link in jQuery -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script
 </body>
 </html>
