Index.handlebars setup

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,20 +15,11 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="home">
-            <div class="jumbotron">
-                <h1 class="title"> Eat The Burger </h1><br />
 
-                {{{ body }}}
+    {{{ body }}}
 
-
-                <button id="submit" type="submit" class="btn btn-danger">Burger Button</button>
-            </div>
-        </div>
-    </div>
 
     <!-- Link in jQuery -->
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 </body>
 </html>
