--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,24 @@
 <div id="container">
 
     <div class="row">
-        
+        <h1>Eat Da Burger</h1>
     </div>
+
+    <div class="row">
+        <img src="../public/assets/css/img/burger.jpg" alt="burger" class"imgBurger">
+    </div>
+
+    <div class="row">
+        <div class="col-md-12" id="mainBurger">
+            <form>
+                <div class="form-group">
+                    <input type="text" name="name">
+                    <button class="btn btn-default" type="submit">Submit</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
 
 
