--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,6 +9,22 @@
     </div>
 
     <div class="row">
+        <div class="col-md-6">
+            <h3>Burgers to Eat</h3>
+
+        </div>
+    </div>
+
+     <div class="row">
+        <div class="col-md-6">
+            <h3>Burgers You've Devoured</h3>
+
+        </div>
+    </div>
+
+
+
+    <div class="row">
         <div class="col-md-12" id="mainBurger">
             <form>
                 <div class="form-group">
