--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,14 +11,27 @@
     <div class="row">
         <div class="col-md-6">
             <h3>Burgers to Eat</h3>
+            <ul>
+                {{#each burgers}}
+                {{Devoured}}
+                <li>
+                    <button type='submit' class="btn btn-default">Devour it</button>
+                </li>
+            </ul>
 
         </div>
     </div>
 
-     <div class="row">
+    <div class="row">
         <div class="col-md-6">
             <h3>Burgers You've Devoured</h3>
+            <ul>
+                {{#each burgers}}
+                {{Devoured}}
+                <li>
 
+                </li>
+            </ul>
         </div>
     </div>
 
