Added H4 for description for burgers to add

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -43,6 +43,7 @@
                 <div class="form-group">
                     <input type="text" name="name">
                     <button class="btn btn-default" type="submit">Submit</button>
+                    <h4>Insert the burger you'd like to add to eat</h4>
                 </div>
             </form>
         </div>
