--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,10 +17,10 @@
                 <li>
                     <button type='submit' class="btn btn-default">Devour it</button>
                 </li>
-            </ul>
+                {{/each}}
 
         </div>
-    </div>
+    </div><br>
 
     <div class="row">
         <div class="col-md-6">
@@ -31,6 +31,7 @@
                 <li>
 
                 </li>
+                {{/each}}
             </ul>
         </div>
     </div>
@@ -68,5 +69,3 @@
 
 
 
-
-</div>
