--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,22 +1,25 @@
 <div id="container">
 
-    <div class="row">
+    <div class="row" id="img">
         <h1>Eat Da Burger</h1>
     </div>
 
-    <div class="row">
-        <img src="../public/assets/css/img/burger.jpg" alt="burger" class"imgBurger">
-    </div>
+    
+        <img src="/assets/css/img/burger.jpg" alt="burger" class"imgBurger">
+   
 
     <div class="row">
         <div class="col-md-6">
             <h3>Burgers to Eat</h3>
             <ul>
                 {{#each burgers}}
-                {{Devoured}}
+                {{#if this.devoured}}
                 <li>
-                    <button type='submit' class="btn btn-default">Devour it</button>
+                    <form action="/burgers/{{this.id}}?_method=PUT" method="POST">
+                        <button type='submit' class="btn btn-default">{{this.burger_name}}</button>
+                    </form>
                 </li>
+                {{/if}}
                 {{/each}}
 
         </div>
@@ -25,14 +28,16 @@
     <div class="row">
         <div class="col-md-6">
             <h3>Burgers You've Devoured</h3>
-            <ul>
-                {{#each burgers}}
-                {{Devoured}}
-                <li>
 
-                </li>
-                {{/each}}
-            </ul>
+            {{#each burgers}}
+            {{#unless this.devoured}}
+            <div>
+                {{this.burger_name}}
+            </div>
+            {{/unless}}
+            {{/each}}
+
+
         </div>
     </div>
 
@@ -42,30 +47,13 @@
         <div class="col-md-12" id="mainBurger">
             <form>
                 <div class="form-group">
+                    <form action="/burgers" method="POST">
                     <input type="text" name="name">
-                    <button class="btn btn-default" type="submit">Submit</button>
+                    <button class="btn btn-default" type="submit">Add Burger</button>
+                    </form>
                     <h4>Insert the burger you'd like to add to eat</h4>
                 </div>
             </form>
         </div>
     </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
