--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,6 +21,7 @@
                 </li>
                 {{/if}}
                 {{/each}}
+                </ul>
 
         </div>
     </div><br>
@@ -29,17 +30,21 @@
         <div class="col-md-6">
             <h3>Burgers You've Devoured</h3>
 
-            {{#each burgers}}
-            {{#unless this.devoured}}
-            <div>
-                {{this.burger_name}}
-            </div>
-            {{/unless}}
-            {{/each}}
+             <ul>
+                {{#each burgers}}
+                {{#if this.devoured}}
+                <li>
+                    <form action="/burgers/{{this.id}}?_method=PUT" method="POST">
+                        <button type='submit' class="btn btn-default">{{this.burger_name}}</button>
+                    </form>
+                </li>
+                {{/if}}
+                {{/each}}
+                </ul>
 
 
         </div>
-    </div>
+    </div><br><br>
 
 
 
@@ -49,9 +54,8 @@
                 <div class="form-group">
                     <form action="/burgers" method="POST">
                     <input type="text" name="name">
-                    <button class="btn btn-default" type="submit">Add Burger</button>
+                    <button class="btn btn-default" type="submit"{{this.burger_name}}>Add Burger</button>
                     </form>
-                    <h4>Insert the burger you'd like to add to eat</h4>
                 </div>
             </form>
         </div>
